kubernetes/service.yaml
# kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-analysis-service
spec:
  selector:
    app: stock-analysis
  # EKS에서 AWS Classic/Network Load Balancer를 프로비저닝합니다.
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
